Fixed some spacing

--- a/src/components/background/BackgroundImage.module.scss
+++ b/src/components/background/BackgroundImage.module.scss
@@ -9,11 +9,13 @@
     height: 100%;
     justify-content: flex-start;
     align-items: center;
+    padding: 3em;
   }
 
   .contentMobile {
     height: 100%;
     justify-content: flex-start;
     align-items: center;
+    padding: 3em;
   }
 }
